Concertando alguns problemas de login e cadastro

--- a/SucosVendas/Sucos Vendas/View/Frm_CadastroLogin.resx
+++ b/SucosVendas/Sucos Vendas/View/Frm_CadastroLogin.resx
@@ -121,7 +121,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAGAAAABgCAYAAADimHc4AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAERtJREFUeF7tXAl4VOW5Tl2qoC0lmZmsZBmiIRAgCWqrbbVsIYSE1RiIgAQEn+d6
+        DAAACwwBP0AiyAAAERtJREFUeF7tXAl4VOW5Tl2qoC0lmZmsZBmiIRAgCWqrbbVsIYSE1RiIgAQEn+d6
         67313l6X6pO2KDtVJJElgCQhKwpmD0xCEqoEkGK1ilW5hUKULckkQZCl+vX7/vP9M+fMTDQkAYaZeZ/n
         fUxm5vzny/t+y3/OGfTywAMPPPDAAw888MADDzzwwAMPnBGmBf371c0zzKybq8uon6fbizxSP09vRkLd
         XBXT9LCLOAf5mMLa2cxZeqghPqq7wMt68H2ome0diGLn1M3TXax/XA92RAM0JqD4wgQygE2olSZIA2bq
@@ -204,8 +204,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADK
-        HQAAAk1TRnQBSQFMAgEBCQEAARgBAAEIAQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAADG
+        HQAAAk1TRnQBSQFMAgEBCQEAARgBAAEYAQABHgEAAR4BAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABeAMAAVoDAAEBAQABCAUAATABKhgAAYACAAGAAwACgAEAAYADAAGAAQABgAEAAoACAAPAAQABwAHc
         AcABAAHwAcoBpgEAATMFAAEzAQABMwEAATMBAAIzAgADFgEAAxwBAAMiAQADKQEAA1UBAANNAQADQgEA
         AzkBAAGAAXwB/wEAAlAB/wEAAZMBAAHWAQAB/wHsAcwBAAHGAdYB7wEAAdYC5wEAAZABqQGtAgAB/wEz
@@ -247,92 +247,92 @@
         dAABEgEAAfB1AAH0AfP/AJ8AAfcc6wGSWgABEwVrAREQawFDAWwEawETMAAEUwH/JQAB7QFrA4sCawuL
         B2sDiwFrAe0nAAfzARsGUwGaJAAB8AEVA4sCaweLAmsCiwdrA4sBZgG8JwAH9AhTJAAB9AFDC4sBawIU
         AYYLiwFDAfMnAAH0BVMBTQlTIwAB/wHqAWsJiwGGARMB9wHvARMBhgmLAWsB6gH/DQAB/wG8Ae8B8wH/
-        FQAB9A1TAU0BUyQAAfABFQFrB4sBhgETAfcB9AH1Ae8BEwGGB4sBawEVAbwB/xQAAewSAAH0AVkOUxkA
-        Bv8FAAH/Ae8BEgFrBYYBZgETARwB9AL1AfQB7wETAWYFhgFrARIB7wL/DgABEQFDAQ4FAAEOEAAB9AFZ
-        DVMB8wkAAf8B8ALvAbwB/woAAfIDEQHxAUMB9AQAAv8B8QEHAfcDkgHtARMBkgHzBPUB9AH3ARQB7QOS
+        FQAB9A1TAU0BUyQAAfABFQFrB4sBhgETAfcB9AH/Ae8BEwGGB4sBawEVAbwB/xQAAewSAAH0AVkOUxkA
+        Bv8FAAH/Ae8BEgFrBYYBZgETARwB9AL/AfQB7wETAWYFhgFrARIB7wL/DgABEQFDAQ4FAAEOEAAB9AFZ
+        DVMB8wkAAf8B8ALvAbwB/woAAfIDEQHxAUMB9AQAAv8B8QEHAfcDkgHtARMBkgHzBP8B9AH3ARQB7QOS
         AfcB7wHxAv8HAAEQAwABEggAAf8EAAHzDgAB9AFZAlMB8QHwCVMIAAH/Ae8BDwEpAgMBKQEPAfcB/wgA
         AfQG7QGSAf8EAAL/BPQBBwETARIG6wHqARQBBwHzA/QC/wsAARQEAAH0AwAB/xUAAfQBWQJTAfMB8gdT
-        AXkB/wcAAf8B6wEoBjEBKQFtAf8HAAH0Bu8BBwH/CAAB/wHwAfgB7Qj3Ae0B+AG8Af8eAAHzDwAB9AFZ
-        AlMBdQEbBFMBdQHzAZgB7QGYBwAB7wEoCDEBKQH3BwAB8wbrAfgB/wgAAfQC9wHzCPQB8wEcAZIB9BUA
+        AXkB/wcAAf8B6wEoBjEBKQFtAf8HAAH0Bu8BBwH/CAAB/wHwAewB7Qj3Ae0B7AG8Af8eAAHzDwAB9AFZ
+        AlMBdQEbBFMBdQHzAZgB7QGYBwAB7wEoCDEBKQH3BwAB8wbrAewB/wgAAfQC9wHzCPQB8wEcAZIB9BUA
         AfABAAH3FgAB9AFZBFMBGgHxAZoBUwF1AXQB/wHvAZgGAAH/AQ8BNwkxAQ8G8AHxAf8BAAH/AfICAAH/
-        AfQJAAH0AZIBBwr1AQcB7QHzEQAB8AkAAf8SAAH0AVkEUwHyAfMBGgFTAXUB8gkAAfABKAExATcCIgEq
-        BTEBAwYpASgBEwHyAesBDgHsAfIBFQEPAfIIAAHzAZIBBwr1AQcB7QHzEwAB/wUAAfcUAAH0AVkIUwF1
-        AfMJAAHvAQMBMQEoAfgB7wEODTEBAwEOAQMBMQEpAQ8BKgEwARAB8wYAAf8B7wFtAQcK9QEHAW0BBwH/
-        BgABDyYAAfQBWQFTAfABegF1ARoB8AEaAVMBdQHzCQAB7wEDATEBKAH4Ae8BDgUxASoFDgEpASgBKQcx
-        AQMB7wUAAf8B7wEUAeoBBwr1AQcB6gETAe8B/wgAAQ4IAAH/BQABvBQAAfQBWQFTAfMB8gF6AvMB8AFT
-        AXUB8wkAAfABKAExATcCIgEqBTEBAw8pASIB7wUAAfQB9wHtAfgBBwH1AvQE9QL0AfUBBwH4Ae0B9wH0
-        CQABDgUAAZIJAAH0EgAB9AJTAXoB8gF1AnoCUwF1AfMJAAH/AQ8BNwkxAQ8Q8AH0BQAB9AH3AfgB6wEH
-        AfMBHAHuAfQC9QH0Ae4B9wHyAQcB6wH4Ae0B8wcAAf8LAAH/AQAB/xYAAfQJUwF1AfMKAAHvASgIMQEp
-        AfcWAAH/AfEB6gESAgcBEgH4AfMC9QH0AfgBEwIHAhIBBwH/LAAB9AfzAfABlwLzCgAB/wHrASgGMQEp
-        AW0B/xYAAf8B8wH4ARMBBwHyAfcBBwH0AvUB9AHuAZIB8gEHARMB6wHyAf8NAAEVBAABkgMAAfAEAAHr
-        DgAB9QFZAfQH8wHwAZcC8wsAAf8B7wEPASkCAwEpAQ8B9wH/FwAB/wHwARIBSgEHCvUBBwFtAeoB7wH0
+        AfQJAAH0AZIBBwr/AQcB7QHzEQAB8AkAAf8SAAH0AVkEUwHyAfMBGgFTAXUB8gkAAfABKAExATcCIgEq
+        BTEBAwYpASgBEwHyAesBDgHsAfIBFQEPAfIIAAHzAZIBBwr/AQcB7QHzEwAB/wUAAfcUAAH0AVkIUwF1
+        AfMJAAHvAQMBMQEoAewB7wEODTEBAwEOAQMBMQEpAQ8BKgEwARAB8wYAAf8B7wFtAQcK/wEHAW0BBwH/
+        BgABDyYAAfQBWQFTAfABegF1ARoB8AEaAVMBdQHzCQAB7wEDATEBKAHsAe8BDgUxASoFDgEpASgBKQcx
+        AQMB7wUAAf8B7wEUAeoBBwr/AQcB6gETAe8B/wgAAQ4IAAH/BQABvBQAAfQBWQFTAfMB8gF6AvMB8AFT
+        AXUB8wkAAfABKAExATcCIgEqBTEBAw8pASIB7wUAAfQB9wHtAewBBwH/AvQE/wL0Af8BBwHsAe0B9wH0
+        CQABDgUAAZIJAAH0EgAB9AJTAXoB8gF1AnoCUwF1AfMJAAH/AQ8BNwkxAQ8Q8AH0BQAB9AH3AewB6wEH
+        AfMBHAG8AfQC/wH0AbwB9wHyAQcB6wHsAe0B8wcAAf8LAAH/AQAB/xYAAfQJUwF1AfMKAAHvASgIMQEp
+        AfcWAAH/AfEB6gESAgcBEgHsAfMC/wH0AewBEwIHAhIBBwH/LAAB9AfzAfABlwLzCgAB/wHrASgGMQEp
+        AW0B/xYAAf8B8wHsARMBBwHyAfcBBwH0Av8B9AG8AZIB8gEHARMB6wHyAf8NAAEVBAABkgMAAfAEAAHr
+        DgAB/wFZAfQH8wHwAZcC8wsAAf8B7wEPASkCAwEpAQ8B9wH/FwAB/wHwARIBSgEHCv8BBwFtAeoB7wH0
         CwABDwMAARUJAAHvAwABDgsAAfQBWQFTAfQH8wHwAZcC8w0AAf8B8ALvAbwB/xkAAf8BBwETAesB9wrx
-        Ae8B6wFuAe0B8xMAAewB8AHvARAFAAH/DAACWQFTAfQH8wHwAZcC8ywAAf8B7wFDARMB6wr4AW0B6gFu
-        AfgB8hoAAf8OAAFZAVMBWQH0B/MB8AGXAvMrAAH/AfIB+AHrAXMLHAFuAUoBbgH4AfISAAHyAREBAAEO
+        Ae8B6wFuAe0B8xMAAewB8AHvARAFAAH/DAACWQFTAfQH8wHwAZcC8ywAAf8B7wFDARMB6wrsAW0B6gFu
+        AewB8hoAAf8OAAFZAVMBWQH0B/MB8AGXAvMrAAH/AfIB7AHrAXMLHAFuAUoBbgHsAfISAAHyAREBAAEO
         Ae8B/xEAB1kEAAH/AXItAAH0AfcBcwF5DHoBdAESARMB9wH0KQABwwFZAVMBWQFTAVkB9AQAAf8BVwFQ
-        AfgB8CoAAfMB+AF0DXoBdAH4AQcB9AH/KgABwwNZAfQIAAHwAZcBVwFyKAAB8wHrDnoBcwHtAfQB/2QA
-        AfMB6wGZDHoBeQHrAe8B/2UAAfMB6g1zARQB7AH0ZgAB9AHvDPgB7QHwAf8oAAEZFgABGQH/NgAB/wF2
-        AZYDlQFOAfQhAAHoFwAB9DUAAfQDlgOVAU4BcAEIIAAB6AIAD+gGAAH1JwAB/wLaAtkB2gLZAdoD2QEA
-        AdoElgOVAU4CcAH0HwAB6AEAAegBwQ0HARkB6AUAAfUnAATaAtkB2gLZAdoD2QWWAQkB/wGVAU4DcAYA
-        Af8B9gH/FgAB6AEAAeEBmQx1AZkBmgHvAeAEAAH1JwAB2wTaAtkB2gLZAdoC2QWWAQkB/wGVAU4DcAUA
-        Af8BWAFZAVgBeQgAC/8CAAHoAQAB4AGZDHUBmQGaAY4B7wHgAwAB9REAAf8BvAHvAfMB/xEAAfQF2gLZ
-        AdoC2QHaAdkDlgb/A3AFAAH0AVkBUwJZAf8FAAH/AbwLBwH/AQAB6AEAAeABmQ11AZkBkwIHAwAB9RgA
+        AewB8CoAAfMB7AF0DXoBdAHsAQcB9AH/KgABwwNZAfQIAAHwAZcBVwFyKAAB8wHrDnoBcwHtAfQB/2QA
+        AfMB6wGZDHoBeQHrAe8B/2UAAfMB6g1zARQB7AH0ZgAB9AHvDOwB7QHwAf8oAAEZFgABGQH/NgAB/wF2
+        AZYDlQFOAfQhAAHoFwAB9DUAAfQDlgOVAU4BcAEIIAAB6AIAD+gGAAH/JwAB/wLaAtkB2gLZAdoD2QEA
+        AdoElgOVAU4CcAH0HwAB6AEAAegBwQ0HARkB6AUAAf8nAATaAtkB2gLZAdoD2QWWAQkB/wGVAU4DcAYA
+        Af8B9gH/FgAB6AEAAeEBmQx1AZkBmgHvAeAEAAH/JwAB2wTaAtkB2gLZAdoC2QWWAQkB/wGVAU4DcAUA
+        Af8BWAFZAVgBeQgAC/8CAAHoAQAB4AGZDHUBmQGaAY4B7wHgAwAB/xEAAf8BvAHvAfMB/xEAAfQF2gLZ
+        AdoC2QHaAdkDlgb/A3AFAAH0AVkBUwJZAf8FAAH/AbwLBwH/AQAB6AEAAeABmQ11AZkBkwIHAwAB/xgA
         AewPAAbaAtkB2gG0AdQB2gOWAgkBwgH/AQkBuwNwBQAB9AFZAlMBegH/BQAB/wH3Ae8BBwbvAQcB7wH3
-        Ae4BAAHoAQAB4AGZDnUCmQEHAQkCAAH1EgABEQFDAQ4FAAEODQAB/wbaAXQDWQHtBZYBCQH/AZUBTgNw
-        BQAB9AJZAVMBWAYAAf8BkgHxCPMB8QH3Ae4BAAHoAQAB4AOZAZoEmQl1AZoBCAIAAfUKAAEQAwABEggA
-        Af8EAAHzDAAB/wHbA9oBeQVZBZYBCQH/AZUBTgJwAU4FAAH0BFkB/wUAAf8B9wHxCPMB8QH3Ae4BAAHo
-        AQAB4AKZA5oCmQOaAZkGdQGaAQgCAAH1DAABFAQAAfQDAAH/FQAB/wLaBlkBmASWA5UBTgJwAf8FAAH0
-        A1kBegH/BQAB/wH3AfEI8wHxAfcB7gEAAegBAAHgAZkBdQWZARoBoAGaARoBmQV1AZoBCAIAAfUbAAHz
-        EgACWQFYAVkBWAFZAfMB/wOWA5UBTgFwAfQGAAH0A1kBGgH/BQAB/wH3AfEG8gPxAfcB7gEAAegBAAHg
-        AZkGdQKaAcMCnwEaAZkDdQGaAQgCAAH1EgAB8AEAAfcYAAH/BlkBGgIAAeABlgOVAZ0B/wcAAfQEWQH/
-        BQAB/wHvAfcD7wEcA+8BHAH3Ae0BvAEAAegBAAHgApkBmgR6AXkBGgKgARoCnwKZAXUBmgEIAgAB9Q4A
-        AfAJAAH/FAAIWQGgDAAD/wH0BFkF/wEAAf8B8APuCAcB/wEAAegBAAHgAZkBdQiZAZoBoAHDAp8BGgGZ
-        AZoBCAIAAfUQAAH/BQAB9xUAAXoBWQJ6AlkCegFZAXoB9AoAAfQBWQM4CFkBegH/AgAK/wMAAegBAAHg
-        AZkJdQGZARoCoAEaAp8BGgEIAgAB9QQAAQ8nAAFZAXoGWQF6AlkJAAH/AlkJOANZEAAB6AEAAeABmQF1
-        CpkCmgGgAb0CnwEIAeEBAAH1BwABDggAAf8FAAG8FQAJWQF6AVkKAANZCTgCWQEAAf8B7gvvAf8BAAHo
+        AbwBAAHoAQAB4AGZDnUCmQEHAQkCAAH/EgABEQFDAQ4FAAEODQAB/wbaAXQDWQHtBZYBCQH/AZUBTgNw
+        BQAB9AJZAVMBWAYAAf8BkgHxCPMB8QH3AbwBAAHoAQAB4AOZAZoEmQl1AZoBCAIAAf8KAAEQAwABEggA
+        Af8EAAHzDAAB/wHbA9oBeQVZBZYBCQH/AZUBTgJwAU4FAAH0BFkB/wUAAf8B9wHxCPMB8QH3AbwBAAHo
+        AQAB4AKZA5oCmQOaAZkGdQGaAQgCAAH/DAABFAQAAfQDAAH/FQAB/wLaBlkBmASWA5UBTgJwAf8FAAH0
+        A1kBegH/BQAB/wH3AfEI8wHxAfcBvAEAAegBAAHgAZkBdQWZARoBoAGaARoBmQV1AZoBCAIAAf8bAAHz
+        EgACWQFYAVkBWAFZAfMB/wOWA5UBTgFwAfQGAAH0A1kBGgH/BQAB/wH3AfEG8gPxAfcBvAEAAegBAAHg
+        AZkGdQKaAcMCnwEaAZkDdQGaAQgCAAH/EgAB8AEAAfcYAAH/BlkBGgIAAeABlgOVAZ0B/wcAAfQEWQH/
+        BQAB/wHvAfcD7wEcA+8BHAH3Ae0BvAEAAegBAAHgApkBmgR6AXkBGgKgARoCnwKZAXUBmgEIAgAB/w4A
+        AfAJAAH/FAAIWQGgDAAD/wH0BFkF/wEAAf8B8AO8CAcB/wEAAegBAAHgAZkBdQiZAZoBoAHDAp8BGgGZ
+        AZoBCAIAAf8QAAH/BQAB9xUAAXoBWQJ6AlkCegFZAXoB9AoAAfQBWQM4CFkBegH/AgAK/wMAAegBAAHg
+        AZkJdQGZARoCoAEaAp8BGgEIAgAB/wQAAQ8nAAFZAXoGWQF6AlkJAAH/AlkJOANZEAAB6AEAAeABmQF1
+        CpkCmgGgAb0CnwEIAeEBAAH/BwABDggAAf8FAAG8FQAJWQF6AVkKAANZCTgCWQEAAf8BvAvvAf8BAAHo
         AQAB4AKZA5oGegGaAXUBmQEaAZoBoAEaAZ8BvAEZAfQB/wcAAQ4FAAGSCQAB9BIAAVkBegpZAXkJAARZ
-        CTgBWQEAAf8B9wEHB+4CBwG1Ae4BAAHoAQAB4AGZDXUCmQGaAaABvQKfAfMB9AH/BAAB/wsAAf8BAAH/
-        FgABUgF6A1kCegRZAXoBWQkAAnoDWQg4AVkBAAH/AfcB8gjzAfIB7wHuAQAB6AEAAeABmQF1D5kBGgKg
-        ARoBnwEaAfQC/ycAAQcBegNZAnoEWQF6Af8JAAN6A1kHOAFZAQAB/wH3AfMG9APzAe8B7gEAAegBAAHg
+        CTgBWQEAAf8B9wEHB7wCBwG1AbwBAAHoAQAB4AGZDXUCmQGaAaABvQKfAfMB9AH/BAAB/wsAAf8BAAH/
+        FgABUgF6A1kCegRZAXoBWQkAAnoDWQg4AVkBAAH/AfcB8gjzAfIB7wG8AQAB6AEAAeABmQF1D5kBGgKg
+        ARoBnwEaAfQC/ycAAQcBegNZAnoEWQF6Af8JAAN6A1kHOAFZAQAB/wH3AfMG9APzAe8BvAEAAegBAAHg
         ApkDmgGZAXkImgF5AXUBmQHwAcICGgGfARoBGwH/CAABFQQAAZIDAAHwBAAB6xAAAW8BeglZAVgB9AkA
-        BHoFWQQ4AVkBAAH/Ae8K8wHvAe4BAAHoAQAB4AOZApoCmQWaApkBmgGZAXUBmgEIAeEBGQEaAb0CmQH/
+        BHoFWQQ4AVkBAAH/Ae8K8wHvAbwBAAHoAQAB4AOZApoCmQWaApkBmgGZAXUBmgEIAeEBGQEaAb0CmQH/
         BgABDwMAARUJAAHvAwABDg4AAUwBWQF6B1kBegEqAZoIAAH/AeUEegGaAv8BwwFZBDgBAAH/Ae8B8Qfz
-        AfIB8QHvAe4BAAHoAQAB4AGZEHUBmgEIAgAB8gHzAhoB/w4AAewB8AHvARAFAAH/DwABTAErAXoGWQF6
-        AVkBKgGTCQABwwR6Af8CAAH/BDgBWQL/AQcBkgMcBfcCkgG8AQAB6AEAAeABmRB1AZoBCAIAAfQB9QH0
+        AfIB8QHvAbwBAAHoAQAB4AGZEHUBmgEIAgAB8gHzAhoB/w4AAewB8AHvARAFAAH/DwABTAErAXoGWQF6
+        AVkBKgGTCQABwwR6Af8CAAH/BDgBWQL/AQcBkgMcBfcCkgG8AQAB6AEAAeABmRB1AZoBCAIAAfQB/wH0
         Av8VAAH/EQABdAFRAVIBegFSAUwBKwFMAXkBegErASoBGwkAAf8B5QN6AfYCAAH/BDgB9AEAAf8B8QPw
-        CLwB/wEAAegBAAHgAZkBdQGZCxoCmgF1AZoBCAIAAfURAAHyAREBAAEOAe8B/xQAAf8BKwJRBCsBUQFM
-        ASsBKgsAAcMB5QJ6AVkB9QH/AlkBOAFZAXoB/wMAC/8CAAHoAQAB4QKZAZoMoAEaAZkBBwEJAgAB9S0A
-        BisBUQIrDAAB/wHDAeUEegNZAXoB/xEAAegBAALhAdwBCAygAfAB3AHhAegCAAH1LgABmQQrAVEBKwGZ
-        DQAB/wH0AaAFegHDAf8SAAHoBAAB3APCARoEoAEbBMIFAAH1LwAB/wEaBZkPAAL/AvQD/xkAA+gBGQSg
-        AeID6AUAAeEB9V8AAfUI4gHzARoDoAEACOIB9QH/aAAB/wH0AcMBoAH0aQABQgFNAT4HAAE+AwABKAMA
-        AXgDAAFaAwABAQEAAQEFAAGgAQUWAAP/AQAD/wH8DAAD/wH8DAAD/wH8DAAD/wH8DAAD/wGMDAAD/wEM
-        DAAB/wHgAR4BHAwAAf8CAAE8DAAB/gIAAXwMAAH4AR8B4AH8DAAB8AF4AWABPAwAAeAB8AECARwMAAHB
-        AeABBgEMDAABhwHDAQ8BhAwAAQ8BxgEfAcAMAAEPAcQBPwHADAABhwHAAX8BhAwAAcEB4AH+AQwMAAHg
-        AeEB/AEcDAAB8AFDAfgBPAwAAfgBBwHgAXwMAAH+AQABAQH8DAAB/gEQAQMB/AwAAfwBMAEfAfwMAAH4
-        AX8B/wH8DAAB8AL/AfwMAAHxAv8B/AwAAfMC/wH8DAAD/wH8DAAD/wH8DAAH/wHwAwABPwP/AQAH/wHw
-        AwABPwP/AQAC/wHBBP8B8AMAAT8D/wEAAf8BgAEABP8B8AMAAT8D/wEAAf8BgAEABP8B8AMAAT8D/wEA
-        Af8BgAEAAX8D/wHwAwABPwH+AQ8B/wEAAf8BgAEAAX8D/wH4AwABPwHwAQEB/wEAAf8BgAEAAX8C/wHA
-        AfgDAAE/AcABAAF/AQAB/wGAAQABfwHAAf8BwAF4AwABfwEHAfgBHwEAAf8BgAEAAf8BAAE/AcABHgIA
-        AQEB/gEeAg8BAAH/AYABAAH+AQABHwHAAR8B4AEAAR8B/AF8AQcBhwEAAf8BgAEAAf4BAAEfAcABHwHg
-        AQABHwL4AUMB4wEAAf8BgAEAAfwCAAETAT8B4AEAAR8E8QEAAf8BgAEHAfwDAAEfAeABAAEfAeMC8QH4
-        AQAB/wGAAQcB/AMAAQ8BwAEAAQ8BxwHzAfkB/AEAAf8BgAEHAfwDAAEPAYABAAEHAeMC8QH4AQAB/wGA
-        AQcB/AMAAQ8BgAEAAQcE8QEAAf8BgAEHAfwDAAEPAYABAAEHAfAB+AFDAeMBAAH/AYABBwH+AQABHwL/
-        AYABAAEHAfwBfAEHAccBAAH/AYABBwH+AQABHwL/AYABAAEHAf4BHgIPAQAB/gEAAQcB/wEAAT8C/wGA
-        AQABBwH/AQcB/AEfAQAB/AEAAQcB/wHAA/8BgAEAAQcB/wHAAQABPwEAAfwBAAEHBf8BgAEAAQcB/wHw
-        AQAB/wEAAfwBAAEHBf8CAAEHAf8B/gEHAf8BAAH8AQcBnwX/AgABBwT/AQAB/AEHAYMF/wIAAQcE/wEA
-        Af4BDwHwBf8CAAEPBP8BAAj/AgABHwT/AQAI/wIAAT8E/wEACP8CAAF/BP8BAAGAAgABPwb/AQAE/wEA
-        AYACAAE/Bf8B/gEAAX8D/wEAAYACAAE/BP8BgAIAAT8D/wEAAYACAAE/BP8BgAIAAT8BHwL/AQABgAIA
-        AT8E/wGAAgABPgEPAfABAQEAAYACAAE/Af8B4AL/AYACAAE+AQcBwAIAAYACAAE/Af8BAAEfAf8BwAIA
-        AT4BBwHAAgABgAIAAT8B/AEAAQcB/wHAAgABPgEPAcACAAGAAgABPwHwAX8BgQH/AeACAAE+AQcBwAIA
-        AYACAAE/AeEB4AHwAf8B+AIAAT4BBwHAAgABgAIAAT8BxwHAAXgBfwH/AgABfgEHAcACAAGAAgABPwGP
-        AYQBPgE/Af4BAQGAAf4BBwHAAgABgAIAAT8EHwH+AQAB/wHwAQABQAIAAYACAAE+AT8CHwGPAfwBAAF/
-        AeABAAEwAQMBAAGAAgABPAF/AT8BnwHPAfwBAAF/AcABAAF/Af8BAAGAAgABPgE/Ah8BjwH8AQABfwHg
-        AQABQAIAAYACAAUfAfgBAAE/AeABAAFAAgABgAIAAg8BhAE+AT8B+AEAAT8B4AEAAUACAAGAAgABAwHH
-        AcABfAF/AfgBAAE/AeABAAFAAgABgAIAAQMB4QHgAfAB/wH4AQABPwHgAQABQAIAAYACAAEDAfABfwHB
-        Af8B+AEAAT8BwAEAAUACAAGAAgABAwH8AQABAwH/AfgBAAE/AeABYAMAAYACAAEDAf8BAAEPAf8B+AEA
-        AT8B4AFgAUACAAGAAgABPwH/AeABfwH/AfgBAAF/AfABAAFwAQEBAAGAAgABPwT/Af4BAAH/AfABAAL/
-        AQABgAIAAT8F/wEAAf8B+AEBAv8BAAGAAgABPwX/AYAB/wH+AQMC/wEAAYACAAE/C/8BAAGAAgABPwv/
-        AQAB/wHBDf8BAAs=
+        CLwB/wEAAegBAAHgAZkBdQGZCxoCmgF1AZoBCAIAAf8RAAHyAREBAAEOAe8B/xQAAf8BKwJRBCsBUQFM
+        ASsBKgsAAcMB5QJ6AVkC/wJZATgBWQF6Af8DAAv/AgAB6AEAAeECmQGaDKABGgGZAQcBCQIAAf8tAAYr
+        AVECKwwAAf8BwwHlBHoDWQF6Af8RAAHoAQAC4QHcAQgMoAHwAdwB4QHoAgAB/y4AAZkEKwFRASsBmQ0A
+        Af8B9AGgBXoBwwH/EgAB6AQAAdwDwgEaBKABGwTCBQAB/y8AAf8BGgWZDwAC/wL0A/8ZAAPoARkEoAHi
+        A+gFAAHhAf9fAAH/COIB8wEaA6ABAAjiAv9oAAH/AfQBwwGgAfRpAAFCAU0BPgcAAT4DAAEoAwABeAMA
+        AVoDAAEBAQABAQUAAaABBRYAA/8BAAP/AfwMAAP/AfwMAAP/AfwMAAP/AfwMAAP/AYwMAAP/AQwMAAH/
+        AeABHgEcDAAB/wIAATwMAAH+AgABfAwAAfgBHwHgAfwMAAHwAXgBYAE8DAAB4AHwAQIBHAwAAcEB4AEG
+        AQwMAAGHAcMBDwGEDAABDwHGAR8BwAwAAQ8BxAE/AcAMAAGHAcABfwGEDAABwQHgAf4BDAwAAeAB4QH8
+        ARwMAAHwAUMB+AE8DAAB+AEHAeABfAwAAf4BAAEBAfwMAAH+ARABAwH8DAAB/AEwAR8B/AwAAfgBfwH/
+        AfwMAAHwAv8B/AwAAfEC/wH8DAAB8wL/AfwMAAP/AfwMAAP/AfwMAAf/AfADAAE/A/8BAAf/AfADAAE/
+        A/8BAAL/AcEE/wHwAwABPwP/AQAB/wGAAQAE/wHwAwABPwP/AQAB/wGAAQAE/wHwAwABPwP/AQAB/wGA
+        AQABfwP/AfADAAE/Af4BDwH/AQAB/wGAAQABfwP/AfgDAAE/AfABAQH/AQAB/wGAAQABfwL/AcAB+AMA
+        AT8BwAEAAX8BAAH/AYABAAF/AcAB/wHAAXgDAAF/AQcB+AEfAQAB/wGAAQAB/wEAAT8BwAEeAgABAQH+
+        AR4CDwEAAf8BgAEAAf4BAAEfAcABHwHgAQABHwH8AXwBBwGHAQAB/wGAAQAB/gEAAR8BwAEfAeABAAEf
+        AvgBQwHjAQAB/wGAAQAB/AIAARMBPwHgAQABHwTxAQAB/wGAAQcB/AMAAR8B4AEAAR8B4wLxAfgBAAH/
+        AYABBwH8AwABDwHAAQABDwHHAfMB+QH8AQAB/wGAAQcB/AMAAQ8BgAEAAQcB4wLxAfgBAAH/AYABBwH8
+        AwABDwGAAQABBwTxAQAB/wGAAQcB/AMAAQ8BgAEAAQcB8AH4AUMB4wEAAf8BgAEHAf4BAAEfAv8BgAEA
+        AQcB/AF8AQcBxwEAAf8BgAEHAf4BAAEfAv8BgAEAAQcB/gEeAg8BAAH+AQABBwH/AQABPwL/AYABAAEH
+        Af8BBwH8AR8BAAH8AQABBwH/AcAD/wGAAQABBwH/AcABAAE/AQAB/AEAAQcF/wGAAQABBwH/AfABAAH/
+        AQAB/AEAAQcF/wIAAQcB/wH+AQcB/wEAAfwBBwGfBf8CAAEHBP8BAAH8AQcBgwX/AgABBwT/AQAB/gEP
+        AfAF/wIAAQ8E/wEACP8CAAEfBP8BAAj/AgABPwT/AQAI/wIAAX8E/wEAAYACAAE/Bv8BAAT/AQABgAIA
+        AT8F/wH+AQABfwP/AQABgAIAAT8E/wGAAgABPwP/AQABgAIAAT8E/wGAAgABPwEfAv8BAAGAAgABPwT/
+        AYACAAE+AQ8B8AEBAQABgAIAAT8B/wHgAv8BgAIAAT4BBwHAAgABgAIAAT8B/wEAAR8B/wHAAgABPgEH
+        AcACAAGAAgABPwH8AQABBwH/AcACAAE+AQ8BwAIAAYACAAE/AfABfwGBAf8B4AIAAT4BBwHAAgABgAIA
+        AT8B4QHgAfAB/wH4AgABPgEHAcACAAGAAgABPwHHAcABeAF/Af8CAAF+AQcBwAIAAYACAAE/AY8BhAE+
+        AT8B/gEBAYAB/gEHAcACAAGAAgABPwQfAf4BAAH/AfABAAFAAgABgAIAAT4BPwIfAY8B/AEAAX8B4AEA
+        ATABAwEAAYACAAE8AX8BPwGfAc8B/AEAAX8BwAEAAX8B/wEAAYACAAE+AT8CHwGPAfwBAAF/AeABAAFA
+        AgABgAIABR8B+AEAAT8B4AEAAUACAAGAAgACDwGEAT4BPwH4AQABPwHgAQABQAIAAYACAAEDAccBwAF8
+        AX8B+AEAAT8B4AEAAUACAAGAAgABAwHhAeAB8AH/AfgBAAE/AeABAAFAAgABgAIAAQMB8AF/AcEB/wH4
+        AQABPwHAAQABQAIAAYACAAEDAfwBAAEDAf8B+AEAAT8B4AFgAwABgAIAAQMB/wEAAQ8B/wH4AQABPwHg
+        AWABQAIAAYACAAE/Af8B4AF/Af8B+AEAAX8B8AEAAXABAQEAAYACAAE/BP8B/gEAAf8B8AEAAv8BAAGA
+        AgABPwX/AQAB/wH4AQEC/wEAAYACAAE/Bf8BgAH/Af4BAwL/AQABgAIAAT8L/wEAAYACAAE/C/8BAAH/
+        AcEN/wEACw==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
